--- a/BUILD.gn
+++ b/BUILD.gn
@@ -2,7 +2,8 @@
 executable("app")
 {
     sources = [
-        "//src/main.cpp"
+        "//src/main.cpp",
+        "//src/executable_context.cpp",
     ]
     include_dirs = [
         "//include"
